[gd_scene load_steps=2 format=3 uid="uid://mhkxfrdxhprx"]

[ext_resource type="Script" uid="uid://cw21gei28i5ib" path="res://scenes/menus/lobby_button.gd" id="1_wqwn6"]

[node name="LobbyButton" type="MarginContainer" unique_id=1610234844]
custom_minimum_size = Vector2(0, 39)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 16.0
grow_horizontal = 2
script = ExtResource("1_wqwn6")

[node name="Button" type="Button" parent="." unique_id=1199894729]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Button" unique_id=1006072509]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -11.5
offset_right = 152.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="LobbyName" type="RichTextLabel" parent="Button/HBoxContainer" unique_id=560868769]
unique_name_in_owner = true
layout_mode = 2
text = "lobby_name"
fit_content = true
autowrap_mode = 0

[node name="LobbyMode" type="RichTextLabel" parent="Button/HBoxContainer" unique_id=1309268037]
unique_name_in_owner = true
layout_mode = 2
text = "lobby_mode"
fit_content = true
autowrap_mode = 0

[node name="PlayerCount" type="RichTextLabel" parent="Button/HBoxContainer" unique_id=71306617]
unique_name_in_owner = true
layout_mode = 2
text = "12 / 12"
fit_content = true
autowrap_mode = 0
